--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        redis-version: [4, 5]
+        redis-version: [4, 5, 6]
 
     name: Start Redis Server v${{ matrix.redis-version }}
     steps:
