--- a/.github/workflows/fallback-to-latest-version.yml
+++ b/.github/workflows/fallback-to-latest-version.yml
@@ -5,9 +5,6 @@ on: [push, pull_request]
 jobs:
   redis-action:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        redis-version: []
 
     name: Start Redis Server with latest Redis version
     steps:
@@ -17,4 +14,4 @@ jobs:
       - name: Start Redis Server
         uses: ./
         with:
-          redis-version: ${{ matrix.redis-version }}
+          redis-version: ${{ matrix.redis-versions }}
