add container name option

--- a/action.yml
+++ b/action.yml
@@ -14,6 +14,10 @@ inputs:
     description: 'Redis port to use and expose'
     required: false
     default: 6379
+  redis-container-name:
+    description: "Name of the created container. Useful if you run multiple Redis containers"
+    required: false
+    default: 'redis'
 
 runs:
   using: 'docker'
@@ -21,3 +25,4 @@ runs:
   args:
     - ${{ inputs.redis-version }}
     - ${{ inputs.redis-port }}
+    - ${{ inputs.redis-container-name }}
