--- a/.github/workflows/container-remove-on-exit-flag.yml
+++ b/.github/workflows/container-remove-on-exit-flag.yml
@@ -1,4 +1,4 @@
-name: Start Redis server with remove container flag
+name: Start Redis server with remove container on exit flag
 
 on: [push, pull_request]
 
@@ -18,4 +18,4 @@ jobs:
         uses: ./
         with:
           redis-version: ${{ matrix.redis-version }}
-          redis-remove-container: true  # false by default
+          redis-remove-container-on-exit: true  # false by default
